Implements status header for Metamask network. Resolves #12.
* New component to display Metamask status
* While we're at it, let's display the current contract network and its
  address
* Refactor the header CSS to be less clunky (no more fixed height!)
* Removes the "width: 100%" from divs that do not need it
* Adds box-sizing to textarea to get it to behave. For browsers that do
  not support box-sizing, the header will be slightly misaligned. Whatever.

--- a/webapp/src/App.css
+++ b/webapp/src/App.css
@@ -10,14 +10,34 @@
 .header {
   display: block;
   box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.3);
-  height: 43px;
-  padding: 10px 0 0 48px;
+  padding: 8px 0;
+  position: relative;
+  margin-bottom: 35px; /* to make room for the Metamask status bar */
 }
+
 .header-container {
   margin: auto;
+  margin-top: 2px;
   width: 666px; /* (•̀ᴗ•́)و ̑̑  */
   position: relative;
 }
+
+.metamask-status-container {
+  background: #ececec;
+  color: #666;
+  font-size: 12px;
+  text-align: center;
+  margin: 0;
+  padding: 3px;
+  border-bottom: 1px solid #ababab;
+  position: absolute;
+  top: 56px;
+  width: 100%;
+  z-index: -1;
+}
+.metamask-status-container p { margin: 0 }
+.metamask-status-container a { color: #666 }
+.metamask-status-container .error { background: #fbd8d8; color: #ab1414;}
 
 .header-link {
   text-decoration: none;
@@ -41,7 +61,7 @@
   outline: none;
   border: 1px #666 solid;
   padding: 8px;
-  margin: 0 8px 0 8px;
+  margin: 0 2px 0 8px;
 }
 .header-input:focus {
   box-shadow: 0 0 5px #fe57a1;
@@ -87,15 +107,16 @@
   font-weight: normal;
   float: right;
   margin-top: 4px;
-  margin-right: -21px;
 }
 
 .codec-select label {
   padding-right: 4px;
 }
 
-
 .new-cube-textarea {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
   width: 100%;
   padding: 10px;
   border-radius: 2px;
@@ -132,7 +153,6 @@
 }
 
 .cube-display {
-  width: 100%;
   padding: 10px;
   border-radius: 2px;
   font-size: 14px;
